Fix deployment issue.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "real-estate-client",
-  "homepage": "https://muhammadzeeshanyousaf.github.io/RealEstate-Frontend/",
+  "homepage": "https://MuhammadZeeshanYousaf.github.io/RealEstate-Frontend/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
